--- a/pages/shipyard.wikitext
+++ b/pages/shipyard.wikitext
@@ -2,9 +2,11 @@
 
 {{See also|[[Research]]}}
 
-[[File:ShipworkImage.png|350px|right|thumb|Ship development page featuring [[Kansas]].]]
-
 Unlocked at commander level 30, the Shipyard contains obtainable special ships of [[:Category:Priority ships|Priority]] (Super Rare) and [[:Category:Decisive ships|Decisive]] (Ultra Rare) rarity.
+
+{{Image Gallery|width=350|height=
+| ShipworkImage.png | Shipyard UI
+}}
 
 == Ships ==
 
@@ -916,26 +918,60 @@ All ships in the Shipyard were added in collaboration with [https://en.wikipedia
   </div>
 </tabber>
 
-== Development ==
-
-=== Unlock Requirements ===
-All ships have a prerequiesite condition necessary to unlock development. Once the condition is met, you are able to start working on that ship's specific development missions. The prerequiesite conditions can be seen in the [[Shipyard#Ships|Ships]] section.
+== Unlock Requirements ==
+All ships have a prerequiesite condition necessary to unlock development. Once the condition is met, you are able to start working on that ship's specific development missions. The prerequiesite conditions can be seen in the [[#Ships|Ships]] section.
 * You can only work on development missions for 1 ship at a time, irrespective of season.
 * There is a 24-hour cooldown for swapping which ship you are developing. After the 24 hours are up, you can switch to focus on another ship's missions. 
 ** Progress on the original ship is saved, and pauses until you switch back to them.
-* For PR1, you just need to have those ships unlocked in the [[Memento#Archives|Memento Archives]]; ships do NOT have to be in your dock.
+* For the PR1 ships' unlock requirements, you just need to have those ships unlocked in the [[Memento#Archives|Memento Archives]]; '''ships do NOT have to be in your dock.'''
+
+== Development Missions ==
+
+Each ship has their own specific development missions that need to be completed before unlocking them. Each ship's missions can be seen in the [[#Ships|Ships]] section.
+
+While most development missions are straightforward, the more complicated ones have explanations below.
+
+=== Combat Data Collection ===
+
+Only experience gathered from the following methods count.
+
+{| class="azltable mw-collapsible" style="text-align: center; width: 60%"
+|+ Shipyard Combat Data Collection EXP
+|-
+! style="text-align: center;"| Category
+! style="width: 50%; color: lime; text-align: center;"| Supported
+! style="width: 50%; color: orangered; text-align: center;"| Unsupported
+|-
+! Location
+| style="background: palegreen;" |
+* [[Campaign]]
+* [[Events|Events]] / [[War Archives]]
+* [[Operation Siren]]
+* [[Daily Raid|Daily Raids]] (if not skipped)
+| style="background-color:LightSalmon" |
+* [[Exercise]]
+* [[Dorm]]
+* [[Lecture Hall|EXP Data Packs]]
+* [[Commissions]]  
+|-
+! Ships
+| style="background: palegreen;" |
+* [[:Category:Ships by nation|Normal ships]]
+* [[:Category:Muse ships|Muse (µ) ships]]
+* [[:Category:Children's Day ships|Children's Day ships]]
+* Ships that are level capped for any reason, if the EXP otherwise would count.  
+** Even if you see +0 EXP gained at the end of a battle.
+| style="background-color:LightSalmon" |
+* [[:Category:META ships|META ships]]  
+** They are META faction, not the faction of their normal counterparts.
+* [[Events#Collaboration_Events|Collaboration ships]]  
+|}
 
 
-
-
-=== Development Missions ===
-
-In order to do so, you must first meet certain prerequisites specific to each Research ship. These prerequisites usually involve reaching a certain amount of [[Fleet Technology]] points, although PR1 requires you to unlock a certain amount of ships from certain hull classes instead, and these ships do not have to be in the dock to count toward the prerequisite. Afterward, you must complete a series of eight quests, which notably requires you to earn 3 million experience for ships of a specific type through combat ([[Exercise]]s and [[Commissions]] do not count, [[Daily Raid]]s and [[Operation Siren]] do), dependent on the Research ship. Research ships cannot be used as enhancement material for regular ships nor be retired.
-
+==== Combat Data Packs ====
 [[Beginner Rewards#Development (PR)|Rookie Missions]] and [[Cruise Missions]] offer [[File:CombatDataPack.png|30px|link=]] '''Combat Data Packs''' which can be substituted to count for 10,000XP for Combat Data Collection by using the "Speed Up" button (of the respective series. You cannot use PR1 Combat Data Packs on PR2 ships for example). A total of 400 Combat Data Packs are available for PR2, 3 & 4, worth 4,000,000XP, and 800 Combat Data Packs for PR1 total worth 8,000,000XP Prototype Cores through Rookie Missions. Cruise Missions offer 100 Combat Data Packs for PR2 every 2 months, worth 1,000,000XP.
 Every Combat Data Pack can alternatively be converted to 2 [[File:Protocoreicon.png|30px|link=Shops#Prototype Shop]] Prototype Cores in the Depot, which can be spent in the [[Shops#Prototype_Shop|Prototype Shop]].
 
-From the start of development, you can halt the progress of a Research ship after waiting a 24-hour cooldown period, which pauses the quests relating to that ship and allows you to begin development of a new ship of your choice. However, you cannot develop two ships at the same time. 
 
 == Enhancing ==
 
@@ -1003,7 +1039,7 @@ Series 1,2,3,4 and the PR ships of PR5 allow the use of {{coin}} to replace BP. 
 |blueprint_catchup_by_gold.png | In-game guide on enhancing with Coins.
 }}
 
-== Fate Simulation ==
+=== Fate Simulation ===
 '''Fate Simulation''' (called "Integrity Reinforcement" in the JP server), is a way to improve Research ships that have reached development level 30 with extra General Blueprints. There are 5 phases, each requiring an increasing amount of General Blueprints to reach the next phase. Research ships initially have 0 luck, but going through these phases allows a Research ship to obtain a total of 15 luck for PR and 25 luck for DR. In addition, when a ship reaches Phase 5, one of the ship's skills is improved, with an additional upgrade at Phase 3 for DR ships. A ship cannot reach Fate Simulation level 5 until it reaches level 100, similar to how Dev Level 30 is locked until level 70.
 
 Currently, all PR ships in Series 1-6, all DR ships in Series 2-3, and [[Hakuryuu]] have this feature. 
