--- a/pages/shipyard.wikitext
+++ b/pages/shipyard.wikitext
@@ -2,15 +2,17 @@
 
 {{See also|[[Research]]}}
 
-Unlocked at commander level 30, the Shipyard contains obtainable special ships of [[:Category:Priority ships|Priority]] (Super Rare) and [[:Category:Decisive ships|Decisive]] (Ultra Rare) rarity.
+Unlocked at commander level 30, the Shipyard contains obtainable special ships of [[:Category:Priority ships|Priority]] (Super Rare) and [[:Category:Decisive ships|Decisive]] (Ultra Rare) rarity, known as '''PR/DR Ships'''. 
 
-{{Image Gallery|width=350|height=
+{{Image Gallery|width=500|height=
 | ShipworkImage.png | Shipyard UI
 }}
 
 == Ships ==
 
-All ships in the Shipyard were added in collaboration with [https://en.wikipedia.org/wiki/World_of_Warships ''World of Warships''], and are loosely based off of existing ships within that game.
+All PR/DR ships are added in collaboration with [https://en.wikipedia.org/wiki/World_of_Warships ''World of Warships''], and are loosely based off of existing ships within that game.
+
+PR/DR ships are split up into Series; you can select which series using the switch button on the bottom left of the UI.
 
 ===Series 1===
 
@@ -617,7 +619,8 @@ All ships in the Shipyard were added in collaboration with [https://en.wikipedia
     |}
    </div>
   </div>
- |-|Shimanto=
+ |-|
+ Shimanto=
   <div style="display:flex; flex-wrap:wrap">
    <div style="margin-right:10px">{{ShipDisplay|5|Shimanto|CL||{{Priority}}&ensp;{{Sakura Empire|x25}}}}</div>
    <div style="font-size:98%">
@@ -919,7 +922,7 @@ All ships in the Shipyard were added in collaboration with [https://en.wikipedia
 </tabber>
 
 == Unlock Requirements ==
-All ships have a prerequiesite condition necessary to unlock development. Once the condition is met, you are able to start working on that ship's specific development missions. The prerequiesite conditions can be seen in the [[#Ships|Ships]] section.
+All PR/DR ships have a prerequiesite condition necessary to unlock development. Once the condition is met, you are able to start working on that ship's specific development missions. The prerequiesite conditions can be seen in the [[#Ships|Ships]] section.
 * You can only work on development missions for 1 ship at a time, irrespective of season.
 * There is a 24-hour cooldown for swapping which ship you are developing. After the 24 hours are up, you can switch to focus on another ship's missions. 
 ** Progress on the original ship is saved, and pauses until you switch back to them.
@@ -929,18 +932,20 @@ All ships have a prerequiesite condition necessary to unlock development. Once t
 
 Each ship has their own specific development missions that need to be completed before unlocking them. Each ship's missions can be seen in the [[#Ships|Ships]] section.
 
-While most development missions are straightforward, the more complicated ones have explanations below.
+Most development missions are straightforward. Some game mechanics have been further explained below. 
 
 === Combat Data Collection ===
 
-Only experience gathered from the following methods count.
+These missions require you to gather experience using specific categories of ships. Only experience gathered from the following supported methods count.
+* If a ship is level capped for any reason (ex. [[Cognitive Awakening]], [[Limit Break]], etc.), any EXP they would have gained '''will count''' towards Combat Data Collection missions, if the EXP would count otherwise.
+** Even if you see +0 EXP at the end of a battle.
 
-{| class="azltable mw-collapsible" style="text-align: center; width: 60%"
+{| class="azltable mw-collapsible"
 |+ Shipyard Combat Data Collection EXP
 |-
 ! style="text-align: center;"| Category
-! style="width: 50%; color: lime; text-align: center;"| Supported
-! style="width: 50%; color: orangered; text-align: center;"| Unsupported
+! style="width: 40%; color: lime; text-align: center;"| Supported
+! style="width: 40%; color: orangered; text-align: center;"| Unsupported
 |-
 ! Location
 | style="background: palegreen;" |
@@ -959,27 +964,31 @@ Only experience gathered from the following methods count.
 * [[:Category:Ships by nation|Normal ships]]
 * [[:Category:Muse ships|Muse (µ) ships]]
 * [[:Category:Children's Day ships|Children's Day ships]]
-* Ships that are level capped for any reason, if the EXP otherwise would count.  
-** Even if you see +0 EXP gained at the end of a battle.
 | style="background-color:LightSalmon" |
 * [[:Category:META ships|META ships]]  
-** They are META faction, not the faction of their normal counterparts.
 * [[Events#Collaboration_Events|Collaboration ships]]  
 |}
 
+=== Combat Data Packs ===
+The [[Commander Handbook#Development Missions|Commander Handbook]] and [[Cruise Missions]] offer [[File:CombatDataPack.png|30px|link=]] '''Combat Data Packs'''.
 
-==== Combat Data Packs ====
-[[Beginner Rewards#Development (PR)|Rookie Missions]] and [[Cruise Missions]] offer [[File:CombatDataPack.png|30px|link=]] '''Combat Data Packs''' which can be substituted to count for 10,000XP for Combat Data Collection by using the "Speed Up" button (of the respective series. You cannot use PR1 Combat Data Packs on PR2 ships for example). A total of 400 Combat Data Packs are available for PR2, 3 & 4, worth 4,000,000XP, and 800 Combat Data Packs for PR1 total worth 8,000,000XP Prototype Cores through Rookie Missions. Cruise Missions offer 100 Combat Data Packs for PR2 every 2 months, worth 1,000,000XP.
+Each '''Combat Data Pack''' counts 10,000 EXP towards Combat Data Collection missions of their respective series. You can use them through the "Speed Up" button.
+
+A total of 400 Combat Data packs per category can be obtained from the [[Commander Handbook#Development Missions|Commander Handbook]], and 100 can be obtained every 2 months from [[Cruise Missions]].
+
 Every Combat Data Pack can alternatively be converted to 2 [[File:Protocoreicon.png|30px|link=Shops#Prototype Shop]] Prototype Cores in the Depot, which can be spent in the [[Shops#Prototype_Shop|Prototype Shop]].
-
 
 == Enhancing ==
 
 === Blueprints ===
-Priority ships use special units called '''General Blueprints''' (often shortened to "BP") obtained from the [[Research Academy]], [[Shops#Prototype Shop|Prototype Shop]], [[Building#Exchange|Medal Exchange]], Event Shops, Event Point Milestone Rewards or other limited events; each PR ship has its own General Blueprints, identified by its icon in the bottom right corner. These are required in order to [[Dockyard#Limit_Break|Limit Break]] said PR ship. However, to unlock certain Development Level, it is still required to reach certain level as per normal ship need for Limit breaks.
+[[File:Shipyard Blueprint Exchange.png|350px|right|thumb|BP Exchange UI.]]
+
+PR/DR ships are enhanced through '''Blueprints''' (often shortened to "BP"). These are obtained mainly from the [[Research Academy]], and also found in the [[Shops#Prototype Shop|Prototype Shop]], [[Medal Shop|Medal Shop]], Event Shops, Event Point Milestone Rewards, and other sources.
+
+Each PR ship has its own Blueprints, identified by the ship's icon in the bottom right corner. Additionally, there are General Blueprints, which can be used on any ship of its Series or earlier through the '''BP Exchange''' button on the top right of the UI. Blueprints are required in order to [[Dockyard#Limit_Break|Limit Break]] and "[[Dockyard#Enhance (Reinforce)|Enhance]]" PR/DR ships. The same level requirements remain for both. 
 
 The table below lists the amount of blueprints needed to reach specific development levels. 
-*The Decisive column is the amount of BPs needed for the DR (rainbow PR) ships.
+*The Decisive column is the amount of BPs needed for the DR (Ultra Rare) ships.
 
 {| class="azltable" style="text-align: center;"
 ! colspan="6" |Required BP's
@@ -1010,10 +1019,14 @@ The table below lists the amount of blueprints needed to reach specific developm
 ! colspan="6" style="background-color:#444444; color:#eeeeee;" | * Limit Break Level. Adds one star to the ship.
 |}
 
-Note that the levels of PR ships are not capped by the number of limit breaks they have undergone; for instance, a recently obtained Neptune (with no development levels and limit breaks) can still reach level 100, and indeed level 125 using the [[Dockyard#Cognitive Awakening|Cognition Awakening]] system. (''Lower'' limits still apply, however; Neptune needs to be at least level 10 to advance past development level 9, for instance.) Aside from this, PR ships level in the same way as regular ships.
+PR/DR ships have no level caps due to [[Limit Break|Limit Breaks]], similar to [[META]] ships and Ultra Rare ships. However, the ship needs to reach specific level thresholds in order to further enhance them, as mentioned in the table above.
 
 === Coins ===
-Series 1,2,3,4 and the PR ships of PR5 allow the use of {{coin}} to replace BP. Blueprints are always taken first, but if no prints are available the option to buy for {{coin}} becomes available. Every day the first 15 purchases are discounted, this is a combined amount amongst all ships in all supported seasons, you do not get 2 free prints per day per ship for example. However the PR prints and DR prints discounts are calculated seperately. Both discounts reset 4 hours after the daily reset each day. The following prices apply to enhance series by coin:
+[[File:Shipyard Coinup.png|350px|right|thumb|Enhancing with Coins UI.]]
+
+You can use {{coin}} Coins on supported ships from older Series to replace BP. If you have blueprints for that ship, you are forced to use them all up before the option to buy with {{coin}} Coins appears. 
+
+Every day, the '''first 15 purchases per rarity (irrespective of series)''' are discounted. Both discounts reset 4 hours after the daily reset each day. The following prices apply to enhance series by coin:
 
 {| class="azltable" style="text-align: center;"
 ! colspan="7" |PR1, 2, 3, 4 & 5 Buyable prints cost
@@ -1040,9 +1053,11 @@ Series 1,2,3,4 and the PR ships of PR5 allow the use of {{coin}} to replace BP. 
 }}
 
 === Fate Simulation ===
-'''Fate Simulation''' (called "Integrity Reinforcement" in the JP server), is a way to improve Research ships that have reached development level 30 with extra General Blueprints. There are 5 phases, each requiring an increasing amount of General Blueprints to reach the next phase. Research ships initially have 0 luck, but going through these phases allows a Research ship to obtain a total of 15 luck for PR and 25 luck for DR. In addition, when a ship reaches Phase 5, one of the ship's skills is improved, with an additional upgrade at Phase 3 for DR ships. A ship cannot reach Fate Simulation level 5 until it reaches level 100, similar to how Dev Level 30 is locked until level 70.
+'''Fate Simulation''', is an extension of the enhancement process. It unlocks (for supported PR/DR ships) after they reach Development Level 30. 
 
-Currently, all PR ships in Series 1-6, all DR ships in Series 2-3, and [[Hakuryuu]] have this feature. 
+Research ships initially have 0 luck, but going through these phases allows a Research ship to obtain a total of 15 luck for PR and 25 luck for DR. In addition, when a ship reaches Phase 5, one of the ship's skills is improved, with an additional upgrade at Phase 3 for DR ships. A ship cannot reach Fate Simulation level 5 until the ship reaches level 100.
+
+Currently, all PR ships in Series 1-6, all DR ships in Series 2-3, and [[Hakuryuu]] have this feature.
 
 {| class="azltable" style="text-align:center;"
 ! colspan="7" | Fate Simulation
@@ -1225,3 +1240,62 @@ Currently, all PR ships in Series 1-6, all DR ships in Series 2-3, and [[Hakuryu
 | The 3rd weapon slot efficiency boost is now unconditional, and additionally increase the efficiency of this ship's 1st weapon slot by 15%. When the effect activates 3 times, the following effects are now added: The ship in your fleet with the lowest current HP percentage restores 4% of her max HP over 8s; Deploys 2 shields that can negate up to 6 enemy shells as well as 2 shields that can negate up to 2 enemy torpedoes; these shields last 10s.
 |}
 </tabber>
+
+== Skin Projection ==
+
+{{Image Gallery|width=350|height=
+| Shipyard projection missions.png | Skin Projection Missions UI
+| Shipyard projection view.png | Manage Projection UI 
+| Shipyard projection selection.png | Skin Projection Selection UI
+}}
+
+Skin Projection is a feature introduced during the [[Recent_News#May_29th_2025|May 29th, 2025]] game update. It allows you to duplicate a PR / DR ship within the Secretary menu only. Each PR/DR ship can have up to 6 different '''Skin Projections''' of themselves. 
+
+In order to create a Skin Projection, you must complete a mission per PR/DR ship. Each mission completed unlocks 1 Skin Projection for that ship. To manage all Skin Projections, click the "Manage Projection" button on the top right of the UI. 
+
+When editing Secretary ships, click the "projection" option in the lower-left corner to choose and add a Skin Projection to that slot. Skin Projections can also be added to the Secretary Rotation List for random display.
+
+=== Missions ===
+
+{| class="azltable mw-collapsible" style="text-align: center"
+|+ Skin Projection Missions
+|-
+! style="width: 10%; text-align: center;"| Mission
+! style="width: 45%; text-align: center;"| Requirement
+! style="width: 45%; text-align: center;"| Notes
+|-
+| '''Proficiency Level'''
+| Reach level 120 with the selected shipgirl.
+| ''This path we walk hand in hand and the footprints we leave side by side are our most precious memories.''
+|-
+| '''Development Level'''
+| Reach {{Tooltip|Development|In-game incorrectly says "Enhancement."}} Level 30 with the selected shipgirl.
+| ''As long as you have mutual understanding, you can create a path to a brighter future.''
+|-
+| '''Combat Experience'''
+| Sortie and obtain 200 victories with the selected shipgirl.
+| ''A battle is a trial, a tempering of the self, and also the proof of your shared bond.''
+|-
+| '''Oathing'''
+| Oath the selected shipgirl.
+| ''With this oath, may your many moments of beauty and bliss join together into an everlasting tale.''
+|-
+| '''Additional Work 1'''
+| Spend 200 {{Gem}} Gems.
+| 
+|-
+| '''Additional Work 2'''
+| Spend 200 {{Gem}} Gems.
+| 
+|}
+
+== Other ==
+
+=== Base Stats ===
+You can see the Stat Hexagon for the ship here. In addition, you can see their skills.
+
+Clicking '''Simulation''' allows you to try out the ship in combat with set equipment and fleets. Numbers in simulation are inflated compared to the actual game, so ships can appear stronger than they actually seem.
+
+=== Enhance ===
+This tab shows you the benefits unlocked per Development Level threshold reached. Benefits include ship stats and ship voicelines unlocked.
+
